NEW: subscription flow changes